--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -8,17 +8,15 @@
     "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint ./src/**/.ts"
+    "lint": "prettier --write ./src/**/*.ts"
   },
   "keywords": [],
   "license": "MIT",
   "devDependencies": {
     "@types/chrome": "^0.0.309",
     "@types/jest": "^29.5.14",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
-    "eslint": "^9.22.0",
     "jest": "^29.7.0",
+    "prettier": "^3.5.3",
     "ts-jest": "^29.2.6"
   }
 }
