--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -15,7 +15,9 @@
   "devDependencies": {
     "@types/chrome": "^0.0.309",
     "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
     "jest": "^29.7.0",
+    "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
     "ts-jest": "^29.2.6"
   }
