--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "webpack --config webpack/webpack.config.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "prettier --write ./src/**/*.ts"
@@ -16,9 +16,13 @@
     "@types/chrome": "^0.0.309",
     "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
+    "cheerio": "^1.0.0",
+    "copy-webpack-plugin": "^13.0.0",
     "jest": "^29.7.0",
-    "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
-    "ts-jest": "^29.2.6"
+    "ts-jest": "^29.2.6",
+    "ts-loader": "^9.5.2",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
