--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -16,6 +16,7 @@
     "@types/chrome": "^0.0.309",
     "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
+    "cheerio": "^1.0.0",
     "copy-webpack-plugin": "^13.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
