WIP with API Gateway

--- a/parser-endpoint/Makefile
+++ b/parser-endpoint/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all check-env sbt-build terraform-init terraform-plan terraform-apply deploy
+.PHONY: all check-env test build terraform-init terraform-plan terraform-apply deploy
 
 # Required environment variables
 REQUIRED_ENV_VARS = AWS_ACCESS_KEY_ID AWS_SECRET_ACCESS_KEY AWS_REGION TF_VAR_openai_api_key
@@ -12,9 +12,13 @@ check-env:
 		fi; \
 	done
 	@echo "All required environment variables are set ✅"
+	
+# Test 
+test: 
+	sbt test 
 
 # Build the Scala project
-sbt-build: check-env
+build: test check-env
 	sbt assembly
 
 # Initialize Terraform
@@ -30,5 +34,5 @@ terraform-apply:
 	cd terraform && terraform apply -auto-approve
 
 # Full deployment pipeline
-deploy: sbt-build terraform-init terraform-plan terraform-apply
+deploy: build terraform-init terraform-plan terraform-apply
 	@echo "Deployment successful 🚀"
